fix logo clipping issue

--- a/client/templates/navbar/navbar.less
+++ b/client/templates/navbar/navbar.less
@@ -171,6 +171,9 @@
 		img#logo {
 			height: 70px;
 		}
+		.dropdown-menu{
+			left: -4rem;
+		}
 		.nav-cart{
 			position: absolute;
 			top: 21px;
@@ -179,7 +182,7 @@
 		ul {
 			float: right;
 			width: 94%;
-			margin-right: 8rem;
+			margin-right: 5rem;
 			margin-bottom: 0;
 			.col-sm-9 {
 				margin: 23px 0;
